# dotfiles

./: .authinfo.gpg  .bash_profile  .bash_prompt  .bashrc  .bashrc_amzn  .gitconfig  .gitignore  .mbsyncrc  .msmtprc  .offlineimaprc  .profile  .stow-local-ignore  .stowrc  .xbindkeysrc  .xinitrc  CLAUDE.md  README.md  YUBIKEY.md  bookmarks  bootstrap.sh  packages-01-27-2026.txt  packages-base.txt  packages-extra.txt  scott-default-iterm-profile.json  setup.sh  sync-claude.sh  sync-to-vc.sh
.claude/: CLAUDE.md  settings.json  statusline.sh
.claude/agents/: code-style-analyzer.md  org-test-generator.md  pr-change-summarizer.md  pr-code-reviewer.md  pr-comment-resolver.md  pr-discussion-summarizer.md  task-planner.md
.claude/commands/: create-pr.md  review-queue.md  theme-generator.md  update-prs.md
.claude/skills/: slack-message.md
.config/: mimeapps.list  zoomus.conf
.config/alacritty/: alacritty.toml
.config/aside/: config.toml  theme.toml
.config/ccl/: config.toml
.config/claude-ask/: config.toml
.config/claude-hid/: config.toml
.config/claude-overlay/: config
.config/claude-voice/: config.yaml
.config/eww/: eww.scss  (+2 more)
.cups/: lpoptions
.emacs.d/: android-init.org  bookmarks  config.org  email.org  init.el  init.el.bak  init.org  org-msg.css  theme.el
.gnupg/: gpg-agent.conf
.local/share/claude-overlay/: meson.build
.local/share/claude-overlay/src/: animation.c  animation.h  config.c  config.h  main.c  render.c  render.h  shm.c  shm.h  socket.c  socket.h  wayland.c  wayland.h
.ssh/: config  id_ed25519.gpg  id_ed25519.pub  known_hosts
.tmux/: .tmux.conf
android/: SETUP.md  install.sh  push-to-phone.sh
(+230 files in other folders)
